adding db function

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     <script src="app/view/TodoView.js"></script>
     <script src="app/view/DoneView.js"></script>
 
+    <script src="app/services/ConnectionFactory.js"></script>
+    <script src="app/dao/TodoDao.js"></script>
+
     <script src="app/controller/TodoController.js"></script>
     <script>
         let todoController = new TodoController();
