Added database connectionFactory and dao partionally

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <script src="app/view/TodoView.js"></script>
     <script src="app/view/DoneView.js"></script>
 
+    <script src="app/service/ConnectionFactory.js"></script>
+
     <script src="app/controller/TodoController.js"></script>
     <script>
         let todoController = new TodoController();
