add functionalities to TodoDao

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-
+    <meta charset="UTF8">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -51,6 +51,7 @@
     <script src="app/view/DoneView.js"></script>
 
     <script src="app/service/ConnectionFactory.js"></script>
+    <script src="app/dao/TodoDao.js"></script>
 
     <script src="app/controller/TodoController.js"></script>
     <script>
